plang/testing/logs/false-incorrect/147/program147.p.p.out
Error at o MJm9x r DA (P5NV) :- (((skY (DQ8G7) (s1zv7))), qAs (URAf) (J) (yDk (H27J) (eCG oTbm (VWukx) Xat) p YO)).:1:22 error: 
o MJm9x r DA (P5NV) :- (((skY (DQ8G7) (s1zv7))), qAs (URAf) (J) (yDk (H27J) (eCG oTbm (VWukx) Xat) p YO)).
                     ^
Error at o MJm9x r DA (P5NV) :- (((skY (DQ8G7) (s1zv7))), qAs (URAf) (J) (yDk (H27J) (eCG oTbm (VWukx) Xat) p YO)).:1:45 error: 
o MJm9x r DA (P5NV) :- (((skY (DQ8G7) (s1zv7))), qAs (URAf) (J) (yDk (H27J) (eCG oTbm (VWukx) Xat) p YO)).
                                            ^
Error at o MJm9x r DA (P5NV) :- (((skY (DQ8G7) (s1zv7))), qAs (URAf) (J) (yDk (H27J) (eCG oTbm (VWukx) Xat) p YO)).:1:104 error: 
o MJm9x r DA (P5NV) :- (((skY (DQ8G7) (s1zv7))), qAs (URAf) (J) (yDk (H27J) (eCG oTbm (VWukx) Xat) p YO)).
                                                                                                       ^