plang/testing/logs/false-incorrect/147/program147.p.p
o MJm9x r DA (P5NV) :- (((skY (DQ8G7) (s1zv7))), qAs (URAf) (J) (yDk (H27J) (eCG oTbm (VWukx) Xat) p YO)).


? yx CpyA.
